dynamix/force-app/main/default/objects/wk_exo__Exotel_Configuration__c/wk_exo__Exotel_Configuration__c.object-meta.xml
<CustomObject>
    <label>Exotel Configuration</label>
    <nameField>
        <displayFormat>wk-{0000}</displayFormat>
        <label>Exotel Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exotel Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>