dynamix/force-app/main/default/objects/wk_exo__Exotel_Configuration__c/fields/wk_exo__By_Default_Create__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__By_Default_Create__c</fullName>
    <description>What will be created by default when call is missed by the user</description>
    <label>By Default Create</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
                <default>true</default>
                <label>Lead</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>