dynamix/force-app/main/default/objects/wk_exo__Exotel_Configuration__c/fields/wk_exo__Exotel_Exophone__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__Exotel_Exophone__c</fullName>
    <label>Exotel Exophone</label>
    <type>Phone</type>
</CustomField>