dynamix/force-app/main/default/objects/wk_exo__Exotel_Configuration__c/fields/wk_exo__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__Record_Type__c</fullName>
    <label>Record Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>