dynamix/force-app/main/default/objects/wk_exo__Exotel_Configuration__c/fields/wk_exo__SID__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__SID__c</fullName>
    <externalId>true</externalId>
    <label>SID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>