dynamix/force-app/main/default/objects/wk_exo__Exotel_Configuration__c/fields/wk_exo__Site_URL__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__Site_URL__c</fullName>
    <label>Site URL</label>
    <type>Url</type>
</CustomField>