dynamix/force-app/main/default/objects/wk_exo__Exotel_Configuration__c/listViews/S_M_Head_Exotel_Configuration.listView-meta.xml
<ListView>
    <fullName>S_M_Head_Exotel_Configuration</fullName>
    <filterScope>Queue</filterScope>
    <label>S&amp;M Head</label>
    <queue>S_M_Head</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>